--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Budget app for couples|Honeyfi</title>		
+		<title>Budget app for couples|Honeyfi</title>	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="img/app_icon.png" type="image/x-icon">
 			<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css" />
 		<link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
