--- a/html/faq.html
+++ b/html/faq.html
@@ -5,6 +5,7 @@
 		<title>honeyfi-Budget app for couples</title>
 		<link rel="icon" href="../img/app_icon.png" type="image/x-icon">
 		<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../css/common.css" />
 		<link rel="stylesheet" href="../css/faq.css" />
 	</head>
