--- a/html/privacy.html
+++ b/html/privacy.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Privacy Policy|Honeyfi</title>
 		<link rel="icon" href="../img/app_icon.png" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.css" />
 	</head>
 	<body>
