--- a/html/help.html
+++ b/html/help.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Honeyfi Help Center</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="../img/app_icon.png" type="image/x-icon">
 		<link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="../css/help.css" />
